[package]
name = "parce"
version = "0.0.0"
authors = ["Joel Courtney <joel.e.courtney@gmail.com>"]
edition = "2018"
description = "A pure-rust parser generator"
readme = "README.md"
repository = "https://github.com/JoelCourtney/parce"
license = "MIT OR Apache-2.0"
keywords = ["parser"]

[dependencies]
parce_macros = { path = "../parce_macros" }
lazy_static = "1.4.0"
regex = "1.5.4"
colored = "2.0.0"

[lib]
path = "src/lib.rs"