[package]
name = "parce_macros"
version = "0.0.0"
authors = ["Joel Courtney <joel.e.courtney@gmail.com>"]
edition = "2018"
description = "Proc macros for the parce crate"
readme = "README.md"
repository = "https://github.com/JoelCourtney/parce_macros"
license = "MIT OR Apache-2.0"
keywords = ["parser"]

[dependencies]
syn = { version = "1.0.73", features = ["full"] }
proc-macro2 = "1.0.27"
quote = "1.0.9"
proc-macro-error = "1.0.4"
Inflector = { version="0.11.4" }
check_keyword = "0.1.1"

[lib]
proc-macro = true
path = "src/lib.rs"