[package]
name = "parce"
version = "0.0.1"
authors = ["Joel Courtney <joel.e.courtney@gmail.com>"]
edition = "2021"
description = "A pure-rust parser generator"
readme = "../README.md"
repository = "https://github.com/JoelCourtney/parce"
license = "GPL-3.0"
keywords = ["parser", "lexer", "grammar", "macro"]
categories = ["algorithms", "parsing", "text-processing"]

[dependencies]
parce_macros = { path = "../macros", version = "0.0.1" }
logos = { version = "0.12.1", optional = true }

[dev-dependencies]
logos = { version = "0.12.1" }

[features]
async = []
