[package]
name = "parce_macros"
version = "0.0.1"
authors = ["Joel Courtney <joel.e.courtney@gmail.com>"]
edition = "2021"
description = "Proc macros for the parce crate"
readme = "README.md"
repository = "https://github.com/JoelCourtney/parce_macros"
license = "GPL-3.0"
keywords = ["parser"]

[dependencies]
syn = { version = "1.0.73", features = ["full"] }
proc-macro2 = "1.0.27"
quote = "1.0.9"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
proc-macro-error = "1.0.4"

[lib]
proc-macro = true